# FileCrawler

./: .gitignore  LICENSE  README.md  dev.ipynb  docker-compose-ftp.yml  main.py  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini  transfer.py  transfer_main.py
docs/: about.md  conf.py  fileswitch.errors.rst  fileswitch.filters.rst  fileswitch.providers.rst  fileswitch.rst  fileswitch.switch.rst  index.rst  modules.rst  myclass.md
fileswitch/: errors.py  filters.py  jobs.py  operator.py  procedures.py  providers.py  registry.py  routes.py  stations.py  switch.py  utils.py
filter/: filters.py  procedures.py
src/fileswitch/: filters.py  operator.py  registry.py  routes.py  stations.py  switch.py  utils.py
tests/: test_filter.py  test_filter_content.py  test_filter_regex.py  test_hello_world.py  test_operator.py  test_procedure.py  test_routes.py  test_switch.py
