[metadata]
name = fileswitch
version = 0.1.0
description = Generate and work with holidays of the BDEW-Calendar for power and gas in Germany.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization

[options]
package_dir =
    = src
packages = fileswitch
install_requires =
    fs @ git+https://github.com/mj0nez/pyfilesystem2@fix-file-move-time-preservation
    py7zr>=0.20.2
python_requires = >=3.9

[options.package_data]
holidays = py.typed


[flake8]
extend-ignore = E203,F401,W503,W504
exclude = __init__.py,*.pyc,tests.py,build,dist
paths = ./fileswitch/ ./tests/

[rstcheck]
ignore_language = python